[gd_scene load_steps=71 format=2]

[ext_resource path="res://Assets/Run back NOVO/0002.png" type="Texture" id=1]
[ext_resource path="res://Assets/Run back NOVO/0006.png" type="Texture" id=5]
[ext_resource path="res://Assets/Run back NOVO/0008.png" type="Texture" id=6]
[ext_resource path="res://Assets/Run back NOVO/0009.png" type="Texture" id=8]
[ext_resource path="res://Assets/Run back NOVO/0010.png" type="Texture" id=10]
[ext_resource path="res://Assets/Run back NOVO/0011.png" type="Texture" id=12]
[ext_resource path="res://Assets/Run back NOVO/0001.png" type="Texture" id=13]
[ext_resource path="res://Assets/Run back NOVO/0012.png" type="Texture" id=14]
[ext_resource path="res://Assets/Run back NOVO/0007.png" type="Texture" id=15]
[ext_resource path="res://Assets/Run back NOVO/0003.png" type="Texture" id=18]
[ext_resource path="res://Assets/Run back NOVO/0005.png" type="Texture" id=19]
[ext_resource path="res://Assets/Run back NOVO/0004.png" type="Texture" id=21]
[ext_resource path="res://Assets/Idle side/0005.png" type="Texture" id=22]
[ext_resource path="res://Assets/Run front NOVO/0002.png" type="Texture" id=23]
[ext_resource path="res://Assets/Run back NOVO/0013.png" type="Texture" id=24]
[ext_resource path="res://Assets/Run back NOVO/0015.png" type="Texture" id=25]
[ext_resource path="res://Assets/Run front NOVO/0001.png" type="Texture" id=26]
[ext_resource path="res://Assets/Run front NOVO/0003.png" type="Texture" id=27]
[ext_resource path="res://Assets/Run back NOVO/0014.png" type="Texture" id=28]
[ext_resource path="res://Assets/Run side NOVO/0008.png" type="Texture" id=30]
[ext_resource path="res://Assets/Run front NOVO/0015.png" type="Texture" id=31]
[ext_resource path="res://Assets/Run front NOVO/0014.png" type="Texture" id=33]
[ext_resource path="res://Assets/Run side NOVO/0003.png" type="Texture" id=34]
[ext_resource path="res://Assets/Run side NOVO/0006.png" type="Texture" id=36]
[ext_resource path="res://Assets/Idle side/0003.png" type="Texture" id=37]
[ext_resource path="res://Assets/Run front NOVO/0013.png" type="Texture" id=38]
[ext_resource path="res://Assets/Idle side/0006.png" type="Texture" id=39]
[ext_resource path="res://Assets/Run front NOVO/0011.png" type="Texture" id=40]
[ext_resource path="res://Assets/Run side NOVO/0007.png" type="Texture" id=41]
[ext_resource path="res://Assets/Run side NOVO/0002.png" type="Texture" id=42]
[ext_resource path="res://Assets/Run front NOVO/0010.png" type="Texture" id=43]
[ext_resource path="res://Assets/Run side NOVO/0011.png" type="Texture" id=44]
[ext_resource path="res://Assets/Run front NOVO/0008.png" type="Texture" id=45]
[ext_resource path="res://Assets/Run front NOVO/0012.png" type="Texture" id=46]
[ext_resource path="res://Assets/Run front NOVO/0007.png" type="Texture" id=47]
[ext_resource path="res://Assets/Run side NOVO/0010.png" type="Texture" id=48]
[ext_resource path="res://Assets/Run side NOVO/0004.png" type="Texture" id=49]
[ext_resource path="res://Assets/Run side NOVO/0014.png" type="Texture" id=51]
[ext_resource path="res://Assets/Run front NOVO/0004.png" type="Texture" id=52]
[ext_resource path="res://Assets/Run side NOVO/0009.png" type="Texture" id=53]
[ext_resource path="res://Assets/Idle side/0004.png" type="Texture" id=54]
[ext_resource path="res://Assets/Run front NOVO/0005.png" type="Texture" id=55]
[ext_resource path="res://Assets/Run front NOVO/0006.png" type="Texture" id=56]
[ext_resource path="res://Assets/Run side NOVO/0005.png" type="Texture" id=60]
[ext_resource path="res://Assets/Idle side/0007.png" type="Texture" id=61]
[ext_resource path="res://Assets/Run side NOVO/0015.png" type="Texture" id=62]
[ext_resource path="res://Assets/Run front NOVO/0009.png" type="Texture" id=63]
[ext_resource path="res://Assets/Run side NOVO/0001.png" type="Texture" id=64]
[ext_resource path="res://Assets/Run side NOVO/0012.png" type="Texture" id=65]
[ext_resource path="res://Assets/Run side NOVO/0013.png" type="Texture" id=66]
[ext_resource path="res://Scenes (.tscn)/EntityBase.tscn" type="PackedScene" id=94]
[ext_resource path="res://Scripts (.gd)/Player.gd" type="Script" id=95]
[ext_resource path="res://Assets/Idle front/0005.png" type="Texture" id=102]
[ext_resource path="res://Assets/Idle front/0006.png" type="Texture" id=103]
[ext_resource path="res://Assets/Idle back/0001.png" type="Texture" id=106]
[ext_resource path="res://Assets/Idle back/0007.png" type="Texture" id=107]
[ext_resource path="res://Assets/Idle back/0005.png" type="Texture" id=108]
[ext_resource path="res://Assets/Idle back/0006.png" type="Texture" id=109]
[ext_resource path="res://Assets/Idle back/0003.png" type="Texture" id=112]
[ext_resource path="res://Assets/Idle front/0001.png" type="Texture" id=116]
[ext_resource path="res://Assets/Idle front/0002.png" type="Texture" id=117]
[ext_resource path="res://Assets/Idle back/0004.png" type="Texture" id=119]
[ext_resource path="res://Assets/Idle front/0003.png" type="Texture" id=121]
[ext_resource path="res://Assets/Idle front/0004.png" type="Texture" id=128]
[ext_resource path="res://Assets/Idle front/0007.png" type="Texture" id=139]
[ext_resource path="res://Assets/Idle back/0002.png" type="Texture" id=140]
[ext_resource path="res://Assets/Idle side/0001.png" type="Texture" id=145]
[ext_resource path="res://Assets/Idle side/0002.png" type="Texture" id=146]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 145 ), ExtResource( 146 ), ExtResource( 37 ), ExtResource( 54 ), ExtResource( 22 ), ExtResource( 39 ), ExtResource( 61 ) ],
"loop": true,
"name": "idleSide",
"speed": 2.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 1 ), ExtResource( 18 ), ExtResource( 21 ), ExtResource( 19 ), ExtResource( 5 ), ExtResource( 15 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 24 ), ExtResource( 28 ), ExtResource( 25 ) ],
"loop": true,
"name": "runBack",
"speed": 30.0
}, {
"frames": [ ExtResource( 116 ), ExtResource( 117 ), ExtResource( 121 ), ExtResource( 128 ), ExtResource( 102 ), ExtResource( 103 ), ExtResource( 139 ) ],
"loop": true,
"name": "idleFront",
"speed": 2.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 23 ), ExtResource( 27 ), ExtResource( 52 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 47 ), ExtResource( 45 ), ExtResource( 63 ), ExtResource( 43 ), ExtResource( 40 ), ExtResource( 46 ), ExtResource( 38 ), ExtResource( 33 ), ExtResource( 31 ) ],
"loop": true,
"name": "runFront",
"speed": 30.0
}, {
"frames": [ ExtResource( 106 ), ExtResource( 140 ), ExtResource( 112 ), ExtResource( 119 ), ExtResource( 108 ), ExtResource( 109 ), ExtResource( 107 ) ],
"loop": true,
"name": "idleBack",
"speed": 2.0
}, {
"frames": [ ExtResource( 64 ), ExtResource( 42 ), ExtResource( 34 ), ExtResource( 49 ), ExtResource( 60 ), ExtResource( 36 ), ExtResource( 41 ), ExtResource( 30 ), ExtResource( 53 ), ExtResource( 48 ), ExtResource( 44 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 51 ), ExtResource( 62 ) ],
"loop": true,
"name": "runSide",
"speed": 30.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25.7097, 35.8464 )

[node name="Player" groups=[
"Player",
] instance=ExtResource( 94 )]
script = ExtResource( 95 )

[node name="AnimatedSprite" parent="." index="0"]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "idleFront"
frame = 3
playing = true

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, -4.62493 )
shape = SubResource( 2 )

[node name="Timer_Mascara" type="Timer" parent="." index="2"]
wait_time = 20.0

[node name="Label" type="Label" parent="." index="3"]
margin_left = 263.399
margin_top = -272.422
margin_right = 317.399
margin_bottom = -258.422
text = "x0 Coins"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="alterou_qtd_bomba" from="." to="." method="_on_Player_alterou_qtd_bomba"]
[connection signal="coletou_mascara_de_gas" from="." to="." method="_on_Player_coletou_mascara_de_gas"]
[connection signal="coletou_moeda" from="." to="." method="_on_Player_coletou_moeda"]
[connection signal="vida_mudou" from="." to="." method="_on_Player_vida_mudou"]
[connection signal="timeout" from="Timer_Mascara" to="." method="_on_Timer_Mascara_timeout"]
